samples/_failures_safe/1761714190_5af4fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eea1a723.c: In function ‘bfs’:
./samples/SAFE/__tmp_eea1a723.c:175:5: error: expected expression at end of input
  175 |     if (q == NULL)
      |     ^~
./samples/SAFE/__tmp_eea1a723.c:175:5: error: expected declaration or statement at end of input
